# todomvc-010

./: Cargo.toml  README.md
migrations/: 20240101000000_create_todos.sql
src/: app.rs  db.rs  lib.rs  main.rs  model.rs  server_fns.rs
src/components/: header.rs  mod.rs  todo_item.rs
style/: main.css
