[package]
name = "todomvc-010"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "todomvc-010"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.8", features = ["nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
http = { version = "1.0" }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"], optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
cfg-if = "1"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:tracing-subscriber",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "todomvc-010"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
